--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -13,10 +13,10 @@ on:
   workflow_dispatch:
 
 env:
-  MANIFEST: https://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni -b twrp-10.0-deprecated
-  DEVICE: KD7
-  DT_LINK: https://github.com/mastersenpai0405/recovery_device_tecno_KD7
-  DT_PATH: device/tecno/KD7
+  MANIFEST: https://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni -b twrp-12.1-deprecated
+  DEVICE: a22x
+  DT_LINK: https://github.com/bluish193/a22-5g-twrp-android-13-edited/tree/bluish193-twrp-13
+  DT_PATH: device/samsung/a22x
   TARGET: recoveryimage
   TZ: Asia/manila
 
@@ -62,7 +62,7 @@ jobs:
          env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
          with:
-          tag_name: TWRP_10.0
-          name: TWRP-KD7
+          tag_name: TWRP_12.1
+          name: TWRP-a22x
           files: | 
-            work/out/target/product/KD7/recovery.img
+            work/out/target/product/a22x/recovery.img
