--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -13,7 +13,7 @@ on:
   workflow_dispatch:
 
 env:
-  MANIFEST: https://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni -b twrp-12.1-deprecated
+  MANIFEST: https://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni 
   DEVICE: a22x
   DT_LINK: https://github.com/bluish193/a22-5g-twrp-android-13-edited/tree/bluish193-twrp-13
   DT_PATH: device/samsung/a22x
